working on validating values for registration

--- a/Cerradura/Cerradura/Login.storyboard
+++ b/Cerradura/Cerradura/Login.storyboard
@@ -27,23 +27,23 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JKR-SS-m2D" userLabel="Login View">
-                                            <rect key="frame" x="200" y="40" width="200" height="139"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JKR-SS-m2D" userLabel="Login View">
+                                            <rect key="frame" x="200" y="40" width="200" height="113"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="UsernameTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J2h-xr-Dz5" customClass="HoshiTextField" customModule="TextFieldEffects">
-                                                    <rect key="frame" x="0.0" y="8" width="200" height="30"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="UsernameTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J2h-xr-Dz5" customClass="HoshiTextField" customModule="TextFieldEffects">
+                                                    <rect key="frame" x="0.0" y="8" width="200" height="17"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                                 </textField>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZgH-wR-2zJ" customClass="HoshiTextField" customModule="TextFieldEffects">
-                                                    <rect key="frame" x="0.0" y="46" width="200" height="30"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZgH-wR-2zJ" customClass="HoshiTextField" customModule="TextFieldEffects">
+                                                    <rect key="frame" x="0.0" y="33" width="200" height="17"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                                                 </textField>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3Y-ap-Inb">
-                                                    <rect key="frame" x="77" y="96" width="47" height="35"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3Y-ap-Inb">
+                                                    <rect key="frame" x="77" y="70" width="47" height="35"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                     <state key="normal" title="Login">
@@ -73,8 +73,8 @@
                                                 <constraint firstItem="J2h-xr-Dz5" firstAttribute="top" secondItem="JKR-SS-m2D" secondAttribute="top" constant="8" id="vZ8-kp-Ruy"/>
                                             </constraints>
                                         </view>
-                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gZZ-mO-e5J">
-                                            <rect key="frame" x="272" y="187" width="57" height="30"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gZZ-mO-e5J">
+                                            <rect key="frame" x="272" y="161" width="57" height="30"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <state key="normal" title="Register">
@@ -164,6 +164,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
+                                                        <action selector="textFieldValueDidChange:" destination="NYC-Rd-9vM" eventType="editingChanged" id="Zn9-k9-s2f"/>
                                                         <outlet property="delegate" destination="NYC-Rd-9vM" id="tps-dg-E3C"/>
                                                     </connections>
                                                 </textField>
@@ -203,6 +204,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
+                                                        <action selector="textFieldValueDidChange:" destination="NYC-Rd-9vM" eventType="editingChanged" id="Xai-wa-ezb"/>
                                                         <outlet property="delegate" destination="NYC-Rd-9vM" id="Jcl-pj-WmX"/>
                                                     </connections>
                                                 </textField>
@@ -242,6 +244,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
+                                                        <action selector="textFieldValueDidChange:" destination="NYC-Rd-9vM" eventType="editingChanged" id="5gd-dX-y8k"/>
                                                         <outlet property="delegate" destination="NYC-Rd-9vM" id="tax-4q-yXn"/>
                                                     </connections>
                                                 </textField>
@@ -281,6 +284,7 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
+                                                        <action selector="textFieldValueDidChange:" destination="NYC-Rd-9vM" eventType="editingChanged" id="VGd-FB-Vmi"/>
                                                         <outlet property="delegate" destination="NYC-Rd-9vM" id="fKl-2u-VzO"/>
                                                     </connections>
                                                 </textField>
