--- a/Cerradura/Cerradura/Login.storyboard
+++ b/Cerradura/Cerradura/Login.storyboard
@@ -7,10 +7,10 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login Menu View Controller-->
         <scene sceneID="QUg-62-zLH">
             <objects>
-                <viewController id="7cN-Fa-rMY" sceneMemberID="viewController">
+                <viewController id="7cN-Fa-rMY" customClass="LoginMenuViewController" customModule="Cerradura" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="K91-Xz-oTA"/>
                         <viewControllerLayoutGuide type="bottom" id="SVf-6a-tav"/>
